<resources>
    <string name="app_name">습관 추적기</string>
    <string name="select_date">날짜 선택</string>
    <string name="set_up">설정</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="split_string">·</string>
    <string name="habit_edit">습관 편집</string>
    <string name="record">기록</string>
    <string name="edit">수정</string>
    <string name="all_delete">전체 삭제</string>
    <string name="add_habit">습관 추가</string>
    <string name="close">닫기</string>
    <string name="select_habit_type_guide">추가할 습관 유형을\n선택해 보세요</string>
    <string name="check_habit">기본 습관</string>
    <string name="check_habit_description">가장 기본 습관으로 달성 시 체크해요.\nex. 10시 기상</string>
    <string name="track_habit_title">기록형 습관</string>
    <string name="time_habit_description">스톱워치를 킨 후 정해둔 목표 시간을 넘겨야 달성해요.\nex. 4시간 동안 공부하기</string>
    <string name="track_habit_description">달성 시 수치를 기록해요.\nex. 몸무게 기록, 걸음 수 기록</string>
    <string name="time_habit_title">스톱워치형 습관</string>
    <string name="check_habit_title">(기본) 투두형 습관</string>
    <string name="start">시작하기</string>
    <string name="start_date">시작 날짜</string>
    <string name="set_goal_time">목표 시간 설정</string>
    <string name="when_will_you_do_it">언제 할래요?</string>
    <string name="habit_repeats_day_of_the_weeks">습관 반복 주기</string>
    <string name="habit_name_hint">습관 이름 ex) 물 1L 마시기</string>
    <string name="set_up_habit_title">습관을 설정하세요</string>
    <string name="when_example_1">아무때나</string>
    <string name="when_example_2">침대에서</string>
    <string name="when_example_3">출근 길에</string>
    <string name="when_example_4">잠들기 전</string>
    <string name="when_example_5">오후 10:00</string>
    <string name="when_example_6">상시</string>
    <string name="when_example_7">눈 뜨자마자</string>
    <string name="semicolon">:</string>
    <string name="set_repeat_day_of_the_weeks">반복 요일 설정</string>
    <string name="set_alarm">알람 받기</string>
    <string name="select_start_date">시작 날짜 선택</string>
    <string name="input_alarm_time">알람 시간 입력</string>
    <string name="setting_alarm_time">알람 시간 설정</string>
    <string name="set_emoji">이모티콘 설정</string>
    <string name="example_day_of_weeks">일, 월, 화, 수, 목, 금, 토</string>
    <string name="example_when_run">출근길</string>
    <string name="example_goal_time">3시간</string>
    <string name="example_start_date">2023-05-09</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="set_habit">습관 추가하기</string>
    <string name="add_habit_success_message">습관이 성공적으로 추가되었어요! 🎉</string>
    <string name="update_habit_success_message">습관이 성공적으로 수정되었어요!</string>
    <string name="delete_habit_success_message">습관을 삭제했어요.</string>
    <string name="start_date_is_before_now_error_message">시작일은 오늘보다 전이어야 해요!</string>
    <string name="date">%d년 %d월</string>
    <string name="empty_habit_message">해야 할 습관이 없어요</string>
    <string name="accept">확인</string>
    <string name="cancel">취소</string>
    <string name="erase">지우기</string>
    <string name="habit_delete_message">지금까지 모든 기록이 영구적으로 삭제돼요. 그래도 삭제할래요?</string>
    <string name="habit_delete_title">모든 기록이 삭제돼요!</string>
    <string name="update_finish">수정 완료</string>
    <string name="update_habit_title">습관을 수정하세요</string>
    <string name="save">저장</string>
    <string name="start_habit_channel_name">습관 시작 알람</string>
    <string name="start_habit_alarm_message">%s 할 시간이에요! %s</string>
    <string name="setting">설정하기</string>
    <string name="deny">무시</string>
    <string name="permission_notification_deny_message">권한이 허용되어야 알림 설정이 가능해요 😢</string>
    <string name="permission_notification_already_deny_message">휴대폰 알림 설정이 꺼져 있어요</string>
    <string name="permission_notification_grated_in_setting_message">설정 페이지에서 먼저 알림 허용을 해주세요</string>
    <string name="weekend">주말</string>
    <string name="weekdays">평일</string>
    <string name="everyday">매일</string>
    <string name="today">오늘</string>
    <string name="finish">완료</string>
    <string name="progress">%d / %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_consecutive_achievements">연속 목표 달성일</string>
    <string name="current_number_of_consecutive_achievements">현재 연속 달성</string>
    <string name="best_current_number_of_consecutive_achievements">최고 연속 달성</string>
    <string name="habit_name_transition">transition_name_%1$,d</string>
    <string name="habit_name_detail_transition">transition_detail_name</string>
    <string name="start_date_message">%d년 %d월 %d일에 시작했어요</string>
    <string name="delete">삭제</string>
    <string name="add_memo">메모 추가</string>
    <string name="statistics">통계</string>
    <string name="time_filter">시간 필터</string>
    <string name="least_on_selected_message">하나 이상 선택 해주세요</string>
    <string name="color">색상</string>
    <string name="morning">오전</string>
    <string name="afternoon">오후</string>
    <string name="evening">저녁</string>
    <string name="all">모두</string>
    <string-array name="short_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>
    <string-array name="full_weekdays">
        <item>일요일</item>
        <item>월요일</item>
        <item>화요일</item>
        <item>수요일</item>
        <item>목요일</item>
        <item>금요일</item>
        <item>토요일</item>
    </string-array>
    <string-array name="custom_month">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="empty_memo_message">작성한 메모가 없어요!</string>
</resources>