<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center|top"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/iv_close"
        style="@style/ImageButtonStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start"
        android:background="@drawable/ic_thick_close"
        android:contentDescription="@string/close"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginVertical="16dp"
        android:text="@string/select_habit_type_guide"
        android:textAppearance="@style/HabitTracker.TextAppearance.Text20.SemiBold" />

    <com.bibbidi.habittracker.ui.customview.HabitTypeSelectView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        custom:descriptionText="@string/check_habit_description"
        custom:icon="@drawable/ic_check_circle"
        custom:iconTint="@color/green_04"
        custom:titleText="@string/check_habit_title" />

    <com.bibbidi.habittracker.ui.customview.HabitTypeSelectView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        custom:descriptionText="@string/track_habit_description"
        custom:icon="@drawable/ic_outline_edit"
        custom:iconTint="@color/orange_03"
        custom:titleText="@string/track_habit_title" />

    <com.bibbidi.habittracker.ui.customview.HabitTypeSelectView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        custom:descriptionText="@string/time_habit_description"
        custom:icon="@drawable/bg_outline_play_circle"
        custom:iconTint="@color/red_03"
        android:clipToPadding="true"
        custom:titleText="@string/time_habit_title" />

</LinearLayout>